--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -37,7 +37,9 @@ jobs:
       - name: Build 🔧
         run: |
           npm install -g npm@10.2.4
-          make build-docs-deploy
+          cd docs
+          ./sync_versions.sh
+          ./build_deploy
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
